media/com_emundus_vue/app_emundus.css
/* ... */
.vc-container {
  position: relative;
  display: inline-flex;
  width: -moz-max-content;
  width: max-content;
  height: -moz-max-content;
  height: max-content;
  font-family: var(--vc-font-family);
  color: var(--vc-color);
  background-color: var(--vc-bg);
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
  -webkit-tap-highlight-color: transparent;
}

.vc-container,
  .vc-container * {
    box-sizing: border-box;
  }

.vc-container:focus, .vc-container *:focus {
      outline: none;
    }

/* Hides double border within popovers */

.vc-container .vc-container {
    border: none;
  }

.vc-bordered {
  border: 1px solid;
  border-color: var(--vc-border);
  border-radius: var(--vc-rounded-lg);
}

.vc-expanded {
  min-width: 100%;
}

.vc-transparent {
  background-color: transparent;
}

.vc-date-picker-content {
  padding: 0;
  background-color: var(--vc-bg);
}

.vc-date-picker-content .vc-container {
    border: 0;
  }

#add-program[data-v-928d1f8b] {
  height: 24px;
  width: 24px;
  padding: unset;
  transition: transform 0.1s ease-in-out;
}
.em-color-round[data-v-928d1f8b] {
  height: 30px;
  width: 30px;
  border-radius: 50%;
}
.modal-date-picker[data-v-928d1f8b] {
  transform: translate(-50%, -50%);
  box-shadow: 0 0 9999px 9999px rgb(0 0 0 / 50%);
}
.fa-file-upload[data-v-6272a5a1] {
  font-size: 25px;
  margin-right: 20px;
}
.list-group-item[data-v-6272a5a1] {
  border: 2px solid #ececec;
  margin-bottom: 10px;
  border-radius: 5px;
}

/**** CUSTOM VUE DROPZONE ****/
#customdropzone[data-v-6272a5a1] {
  letter-spacing: 0.2px;
  background: #fff;
  color: #C5C8CE;
  transition: background-color 0.2s linear;
  height: 200px;
  padding: 40px;
  border: dashed;
  border-radius: 5px;
  justify-content: center;
  align-items: center;
  display: flex;
  cursor: pointer;
}
#customdropzone .dz-preview[data-v-6272a5a1] {
  width: 100%;
  display: inline-block;
  text-align: center;
}
#customdropzone .dz-preview .dz-image[data-v-6272a5a1] {
  width: auto;
  height: 100px;
}
#customdropzone .dz-preview .dz-image > div[data-v-6272a5a1] {
  width: inherit;
  height: inherit;
  background-size: contain;
  background-repeat: no-repeat;
  background-position: center;
}
#customdropzone .dz-preview .dz-image > img[data-v-6272a5a1] {
  width: 100%;
}
#customdropzone .dz-preview .dz-details[data-v-6272a5a1] {
  color: black;
  transition: opacity 0.2s linear;
  text-align: center;
}
#customdropzone .dz-success-mark[data-v-6272a5a1] {
  display: none;
}
.dz-default.dz-message[data-v-6272a5a1] {
  text-align: center !important;
}
.dz-error-mark[data-v-6272a5a1] {
  display: none;
}

/**** END ****/
.em-document-dropzone-card[data-v-6272a5a1] {
  background: var(--neutral-100);
  border-radius: 5px;
  padding: 16px 24px;
}
.em-filetype-icon[data-v-6272a5a1] {
  width: 50px;
}#modalAddTriggercandidate .v--modal[data-v-5f2a6404],
#modalAddTriggermanual .v--modal[data-v-5f2a6404],
span[id*=modalEmailPreview_] .v--modal[data-v-5f2a6404],
#modalUpdateLogo .v--modal[data-v-5f2a6404],
#modalUpdateIcon .v--modal[data-v-5f2a6404],
#modalUpdateColors .v--modal[data-v-5f2a6404] {
  padding: 32px !important;
}
span[id*=modalEditElement] .v--modal[data-v-5f2a6404],
#modalAddDocuments .v--modal[data-v-5f2a6404],
#modalAffectCampaign .v--modal[data-v-5f2a6404],
#modalMenu .v--modal[data-v-5f2a6404],
#modalSide .v--modal[data-v-5f2a6404] {
  position: fixed;
  right: 0;
  left: unset !important;
  height: 100% !important;
  padding: 32px;
  top: 0 !important;
  overflow: scroll;
}
span[id*=modalEditElement] .v--modal-overlay[data-v-5f2a6404],
#modalAddDocuments .v--modal-overlay[data-v-5f2a6404],
#modalMenu .v--modal-overlay[data-v-5f2a6404],
#modalSide .v--modal-overlay[data-v-5f2a6404] {
  background: unset;
}

/**** CUSTOM VUE DROPZONE ****/
#customdropzone[data-v-5f2a6404] {
  letter-spacing: 0.2px;
  background: #fff;
  color: #C5C8CE;
  transition: background-color 0.2s linear;
  height: 200px;
  padding: 40px;
  border: dashed;
  border-radius: 5px;
  justify-content: center;
  align-items: center;
  display: flex;
  cursor: pointer;
}
.dz-preview[data-v-5f2a6404] {
  width: 100%;
  display: inline-block;
  text-align: center;
}
.dz-image[data-v-5f2a6404] {
  width: auto;
  height: 100px;
  margin-bottom: 10px;
}
.dz-image > div[data-v-5f2a6404] {
  height: 100px;
  background-repeat: no-repeat;
  background-size: contain;
  background-position: center;
}
.dz-details[data-v-5f2a6404] {
  color: black;
  transition: opacity 0.2s linear;
  text-align: center;
}
.dz-success-mark[data-v-5f2a6404] {
  display: none;
}
.dz-default.dz-message[data-v-5f2a6404] {
  text-align: center !important;
}
.dz-error-mark[data-v-5f2a6404] {
  display: none;
}
.dz-remove[data-v-5f2a6404] {
  color: #1c6ef2;
}

/**** END ****/
.placement-center[data-v-5f2a6404] {
  position: fixed;
  left: 50%;
  transform: translate(-50%, -50%);
  top: 50%;
}


.em-email-card[data-v-2cb2c72d] {
  background: white;
  border-radius: 5px;
  padding: 16px 24px;
}
a.tw-cursor-pointer:nth-child(2) .material-symbols-outlined[data-v-2cb2c72d] {
  color: #DB333E;
}
a.tw-cursor-pointer:nth-child(2):hover .material-symbols-outlined[data-v-2cb2c72d] {
  color: #C31924;
}

#more-form-iframe[data-v-a04b9d4b] {
  height: 50vh;
}
.row-fluid .control-group.fabrikElementContainer label.fabrikLabel.control-label.fabrikTip i.icon-star.small[data-v-ae20bbab] {
  top: -5px;
}
.icon-star.small[data-v-ae20bbab] {
  margin-top: 0px;
  padding-top: 0px;
  position: relative;
  padding-left: 2px;
  color: #c30505;
  font-size: 5px;
}
.w--current[data-v-ae20bbab] {
  border: solid 1px #eeeeee;
  background: #eeeeee;
}
.w--current[data-v-ae20bbab]:hover {
  color: var(--em-profile-color);
}
.tw-cursor-pointer[data-v-ae20bbab]:hover {
  color: var(--em-profile-color);
}
.em-w-custom[data-v-ae20bbab] {
  width: calc(100% - 75px) !important;
  margin-left: auto;
}
#add-form-next-campaign[data-v-ae20bbab] {
  width: 100%;
}
/* ... */

